--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "A multi functional whatsapp bot Web paircode.",
     "main": "index.js",
     "scripts": {
-      "start": "pm2 start index.js --deep-monitoring --attach --name DANUWA-MD",
-      "stop": "pm2 stop DANUWA-MD",
-     "restart": "pm2 restart DANUWA-MD"
+      "start": "pm2 start index.js --deep-monitoring --attach --name AURA-MD",
+      "stop": "pm2 stop AURA-MD",
+     "restart": "pm2 restart AURA-MD"
     },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.17",
