--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
     "description": "A multi functional whatsapp bot Web paircode.",
     "main": "index.js",
     "scripts": {
-      "start": "pm2 start index.js --deep-monitoring --attach --name AURA-MD",
-      "stop": "pm2 stop AURA-MD",
-     "restart": "pm2 restart AURA-MD"
+      "start": "pm2 start index.js --deep-monitoring --attach --name DANUWA-MD",
+      "stop": "pm2 stop DANUWA-MD",
+     "restart": "pm2 restart DANUWA-MD"
     },
   "dependencies": {
-    "@whiskeysockets/baileys": "^7.0.0-rc.9",
-    "qrcode": "^1.5.4",
-    "awesome-phonenumber": "^7.6.0",
-    "pino": "^10.1.0",
-    "phone" : "3.1.68",
-    "body-parser": "^2.2.1",
-    "express": "^5.2.1",
+    "@whiskeysockets/baileys": "^6.7.17",
+    "qrcode": "^1.5.3",
+    "awesome-phonenumber": "^2.64.0",
+    "pino": "^8.1.0",
+    "phone" : "3.1.30",
+    "body-parser": "^1.20.1",
+    "express": "^4.18.1",
     "path": "^0.12.7",
-    "megajs": "^1.3.9",
-    "pm2": "^6.0.14"
+    "megajs": "^1.1.0",
+    "pm2": "^5.2.0"
    }
 }
